Spacing adjustments & Fixes for Windows
Adjust some spacing to fix "Privacy" title from having a small cutoff on smaller sizes. Remove icons from Buttons for consistency.

# Conflicts:
#	src/qt/forms/privacydialog.ui
#	src/qt/forms/receivecoinsdialog.ui
#	src/qt/res/css/default.css

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -173,7 +173,7 @@ QLabel {
 	color: #FFFFFF;
 	/* background: rgba(0, 0, 0, 0.2);
     border-radius: 2rem; */
-	margin-bottom: 2rem;
+	margin-bottom: 1.5rem;
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 	font-family: "Hind";
@@ -188,7 +188,7 @@ QLabel {
 QLabel#labelOverviewHeaderLeft {
 	font-size: 46px;
 	font-weight: 600;
-	qproperty-minimumSize:464px 10px; 
+	qproperty-minimumSize:464px 30px; 
 }
 .QRadioButton {
 	/* Radio Button Labels */
@@ -224,7 +224,7 @@ QLineEdit:focus, BitcoinAmountField:focus {
 	outline: 0;
 	background-color: rgba(255, 255, 255, 0.1);
 	/* border-left:2px solid rgba(78, 105, 224,1); */
-	border:1px solid rgba(78, 105, 224,1);
+	border:2px solid #384980;
 }
 
 
@@ -277,7 +277,7 @@ QComboBox { /* Dropdown Menus */
 
 QComboBox:checked {
 	background-color: rgba(255, 255, 255, 0.1);
-	border:1px solid rgba(78, 105, 224,0.8);
+	border:2px solid #384980;
 }
 QComboBox:editable {
 	background:#4a4a4a;
@@ -323,11 +323,14 @@ QAbstractSpinBox {
 	border:1px solid #535353;
 	padding: 3px 5px 3px 5px;
 	background:#fcfcfc;
+	color: #FFFFFF;
+	padding: 0.6em 0.85em 0.6em;
+	border-radius: 8px;
 }
 
 QAbstractSpinBox:focus {
 	background-color: rgba(255, 255, 255, 0.1);
-	border:1px solid rgba(78, 105, 224,0.8);
+	border:2px solid #384980;
 }
 QAbstractSpinBox::up-button {
 	subcontrol-origin: border;
